@@ -2,7 +2,7 @@ name = Yakuake-Sessions
 
 [Prereqs]
 perl              = 5.010001
-namespace::sweep  = 0.006
+namespace::autoclean = 0.19
 Class::Usul       = v0.41.0
 File::DataClass   = v0.35.0
 Moo               = 1.004002
